{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 46,
  "lineage": "4bd5388a-d4b8-8be9-fa97-1b63bca7952f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-vpn-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-10-13T12:41:24.754-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dt-sandbox-host-proj/global/firewalls/allow-vpn-traffic",
            "log_config": [],
            "name": "allow-vpn-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/global/networks/dt-sandbox-service-proj-shared-vpc",
            "priority": 1000,
            "project": "dt-sandbox-host-proj",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/global/firewalls/allow-vpn-traffic",
            "source_ranges": [
              "192.168.0.0/16",
              "34.30.88.143/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "classic_vpn_1_rule_esp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-10-13T12:22:27.845-07:00",
            "forwarding_rule_id": 6237808674721604380,
            "id": "projects/dt-sandbox-host-proj/regions/us-central1/forwardingRules/dt-sandbox-host-proj-classic-vpn-1-rule-esp",
            "ip_address": "35.232.23.99",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "dt-sandbox-host-proj-classic-vpn-1-rule-esp",
            "network_tier": "PREMIUM",
            "project": "dt-sandbox-host-proj",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/regions/us-central1/forwardingRules/dt-sandbox-host-proj-classic-vpn-1-rule-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/regions/us-central1/targetVpnGateways/dt-sandbox-host-proj-classic-target-gateway-vpn-1"
          },
          "dependencies": [
            "google_compute_vpn_gateway.classic_target_gateway_vpn_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "classic_vpn_1_rule_udp500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-10-13T12:22:27.908-07:00",
            "forwarding_rule_id": 3620163362079482652,
            "id": "projects/dt-sandbox-host-proj/regions/us-central1/forwardingRules/dt-sandbox-host-proj-classic-vpn-1-rule-udp500",
            "ip_address": "35.232.23.99",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "dt-sandbox-host-proj-classic-vpn-1-rule-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "dt-sandbox-host-proj",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/regions/us-central1/forwardingRules/dt-sandbox-host-proj-classic-vpn-1-rule-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/regions/us-central1/targetVpnGateways/dt-sandbox-host-proj-classic-target-gateway-vpn-1"
          },
          "dependencies": [
            "google_compute_vpn_gateway.classic_target_gateway_vpn_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "classic_vpnc_1_rule_udp4500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-10-13T12:22:27.768-07:00",
            "forwarding_rule_id": 7761905406282146588,
            "id": "projects/dt-sandbox-host-proj/regions/us-central1/forwardingRules/dt-sandbox-host-proj-classic-vpn-1-rule-udp4500",
            "ip_address": "35.232.23.99",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "dt-sandbox-host-proj-classic-vpn-1-rule-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "dt-sandbox-host-proj",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/regions/us-central1/forwardingRules/dt-sandbox-host-proj-classic-vpn-1-rule-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/regions/us-central1/targetVpnGateways/dt-sandbox-host-proj-classic-target-gateway-vpn-1"
          },
          "dependencies": [
            "google_compute_vpn_gateway.classic_target_gateway_vpn_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "classic_vpn_tunnel_1_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "192.168.128.0/24",
            "id": "projects/dt-sandbox-host-proj/global/routes/dt-sandbox-host-proj-classic-tunnel-1-route-2",
            "name": "dt-sandbox-host-proj-classic-tunnel-1-route-2",
            "network": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/global/networks/dt-sandbox-service-proj-shared-vpc",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/regions/us-central1/vpnTunnels/dt-sandbox-host-proj-classic-vpn-tunnel-1",
            "priority": 1000,
            "project": "dt-sandbox-host-proj",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/global/routes/dt-sandbox-host-proj-classic-tunnel-1-route-2",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_vpn_gateway.classic_target_gateway_vpn_1",
            "google_compute_vpn_tunnel.classic_vpn_tunnel_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "classic_vpn_vpn_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64512,
                "keepalive_interval": 60
              }
            ],
            "creation_timestamp": "2024-10-13T13:21:42.968-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/dt-sandbox-host-proj/regions/us-central1/routers/dt-sandbox-host-proj-classic-vpn-router-dev",
            "name": "dt-sandbox-host-proj-classic-vpn-router-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/global/networks/dt-sandbox-service-proj-shared-vpc",
            "project": "dt-sandbox-host-proj",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/regions/us-central1/routers/dt-sandbox-host-proj-classic-vpn-router-dev"
          }
        }
      ]
    }
  ]
}